--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,46 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Bees</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-      }
-      header,
-      footer {
-        background-color: #333;
-        color: white;
-        padding: 1rem;
-        text-align: center;
-      }
-      main {
-        display: flex;
-        flex: 1;
-      }
-      .content {
-        flex: 3;
-        padding: 1rem;
-        background-color: #f0f0f0;
-      }
-      .sidebar {
-        flex: 1;
-        padding: 1rem;
-        background-color: #ddd;
-      }
-      @media (max-width: 768px) {
-        main {
-          flex-direction: column;
-        }
-        .sidebar {
-          order: -1;
-        }
-      }
-    </style>
   </head>
   <body>
     <header>
