trying to find the right image path fo the image

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,30 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Bees</title>
+
+    <style></style>
   </head>
+
   <body>
     <header>
-      <h1>Bees</h1>
+      <h1>Bee Club</h1>
     </header>
     <main>
-      <div class="content">
-        <h2>Main Content</h2>
-        <p>
-          This is the main content area. It takes up most of the space on larger
-          screens.
-        </p>
-      </div>
-      <div class="sidebar">
-        <h2>Sidebar</h2>
-        <p>
-          This is the sidebar. On smaller screens, it will appear above the main
-          content.
-        </p>
-      </div>
+      <aside><div class="aside_div">Test</div></aside>
+      <section>
+        <div class="section_div">Main Content</div>
+      </section>
     </main>
-    <footer>
-      <p>Footer</p>
-    </footer>
+    <footer>this is the footer</footer>
   </body>
 </html>
-<!-- TODO: aws to host? -->
