fixed. had to move assets into public folder

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,7 @@
       <h1>Bee Club</h1>
     </header>
     <main>
-      <aside><div class="aside_div">Test</div></aside>
+      <aside></aside>
       <section>
         <div class="section_div">Main Content</div>
       </section>
