--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,14 @@
   </head>
 
   <body>
-    <nav class="outer-col-1">Nav</nav>
-    <div class="outer-col-2">
-      <header>Header</header>
-      <div class="inner-row">
-        <div class="inner-col">
-          <article>Article</article>
-          <footer>Footer</footer>
-        </div>
-        <aside>Aside</aside>
-      </div>
+    <div class="container">
+      <div class="header">header</div>
+      <div class="nav">nav</div>
+      <div class="main">main</div>
+      <div class="aside">aside</div>
+      <div class="footer">footer</div>
     </div>
+
     <script type="module" src="./js/app.js"></script>
   </body>
 </html>
